--- a/7s.ipynb
+++ b/7s.ipynb
@@ -36,7 +36,7 @@
       "metadata": {
         "id": "xlMSHEIBQIpe"
       },
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": []
     },
     {
@@ -102,7 +102,7 @@
       "metadata": {
         "id": "Az5Pt0ZvjqiY"
       },
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": []
     },
     {
@@ -146,7 +146,7 @@
       "metadata": {
         "id": "Kgshbw4ajrmw"
       },
-      "execution_count": null,
+      "execution_count": 26,
       "outputs": []
     },
     {
@@ -313,7 +313,7 @@
         "\n",
         "\n",
         "# ------------------- EXECUTE PULL -------------------\n",
-        "REQUESTED_MODELS = [\"mistral\", \"llama3\", \"gemma2:9b-instruct\"]\n",
+        "REQUESTED_MODELS = [\"mistral\", \"llama3\", \"gemma2\"]\n",
         "print(\"\\n📥 Pulling models via running daemon...\\n\")\n",
         "\n",
         "for m in REQUESTED_MODELS:\n",
@@ -323,10 +323,37 @@
         "!ollama list\n"
       ],
       "metadata": {
-        "id": "s4_GiZ4epPjr"
+        "id": "s4_GiZ4epPjr",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "bd9bb193-48b3-4723-cafc-ab13bac2d95b"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "✅ Ollama already installed.\n",
+            "🚀 Starting ollama serve…\n",
+            ".\n",
+            "✅ Ollama API ready at http://127.0.0.1:11434\n",
+            "\n",
+            "📥 Pulling models via running daemon...\n",
+            "\n",
+            "✅ mistral already available.\n",
+            "✅ llama3 already available.\n",
+            "✅ gemma2 already available.\n",
+            "\n",
+            "📋 Models available now:\n",
+            "NAME              ID              SIZE      MODIFIED       \n",
+            "mistral:latest    6577803aa9a0    4.4 GB    8 minutes ago     \n",
+            "gemma2:latest     ff02c3702f32    5.4 GB    35 minutes ago    \n",
+            "llama3:latest     365c0bd3c000    4.7 GB    43 minutes ago    \n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -338,13 +365,25 @@
         "CHAT = f\"{BASE}/api/chat\"\n",
         "GEN  = f\"{BASE}/api/generate\"\n",
         "print(f\"🌐 Connected to Ollama at {BASE}\")\n",
-        "PRIMARY_MODEL = models[0]"
+        "PRIMARY_MODEL = REQUESTED_MODELS[0]"
       ],
       "metadata": {
-        "id": "86JKChI44VKI"
+        "id": "86JKChI44VKI",
+        "outputId": "09cabd07-1892-418c-c751-df138e02f81b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "🌐 Connected to Ollama at http://127.0.0.1:11434\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -448,10 +487,24 @@
         "print(f\"🌐 Connected to Ollama at {BASE}\")\n"
       ],
       "metadata": {
-        "id": "piFQ0u-Gj0NQ"
+        "id": "piFQ0u-Gj0NQ",
+        "outputId": "4f38211d-55de-430c-ac0e-741f7f2dd88c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "✅ Ollama already installed.\n",
+            "✅ Ollama service already running.\n",
+            "🌐 Connected to Ollama at http://127.0.0.1:11434\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -880,56 +933,133 @@
       "metadata": {
         "id": "OsMRUxpNkI7v"
       },
-      "execution_count": null,
+      "execution_count": 31,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "# ---------------------------\n",
-        "# 4) OLLAMA CHAT HELPERS\n",
-        "# ---------------------------\n",
+        "# ===============================================================\n",
+        "# 🧠 OLLAMA CHAT HELPERS — Auto-detects generate/chat endpoint\n",
+        "# ===============================================================\n",
+        "import requests, json, time\n",
+        "from typing import Dict\n",
+        "\n",
         "TEMPERATURE, TOP_P, REPEAT_PENALTY, TIMEOUT_S = 0.4, 0.9, 1.1, 860\n",
         "\n",
+        "# ---------------------------------------------------------------\n",
+        "# 1️⃣ Detect endpoint availability and set USE_GENERATE\n",
+        "# ---------------------------------------------------------------\n",
+        "BASE = \"http://127.0.0.1:11434\"\n",
+        "GEN  = f\"{BASE}/api/generate\"\n",
+        "CHAT = f\"{BASE}/api/chat\"\n",
+        "\n",
+        "def detect_generate_support():\n",
+        "    try:\n",
+        "        r = requests.options(GEN, timeout=3)\n",
+        "        if r.status_code in (200, 204):\n",
+        "            return True\n",
+        "    except Exception:\n",
+        "        pass\n",
+        "    return False\n",
+        "\n",
+        "USE_GENERATE = detect_generate_support()\n",
+        "print(f\"⚙️ Using {'/api/generate' if USE_GENERATE else '/api/chat'} endpoint for inference.\")\n",
+        "\n",
+        "# ---------------------------------------------------------------\n",
+        "# 2️⃣ Ask LLM — general wrapper\n",
+        "# ---------------------------------------------------------------\n",
         "def ask_llm(model: str, sys: str, user: str) -> str:\n",
-        "    if USE_GENERATE:\n",
-        "        prompt = f\"<<SYS>>\\n{sys}\\n<</SYS>>\\n\\n{user}\"\n",
-        "        r = requests.post(GEN, json={\n",
-        "            \"model\": model, \"prompt\": prompt, \"stream\": False,\n",
-        "            \"options\": {\"temperature\": TEMPERATURE, \"top_p\": TOP_P, \"repeat_penalty\": REPEAT_PENALTY}\n",
-        "        }, timeout=TIMEOUT_S)\n",
-        "        r.raise_for_status()\n",
-        "        return (r.json().get(\"response\") or \"\").strip()\n",
-        "    else:\n",
-        "        r = requests.post(CHAT, json={\n",
-        "            \"model\": model,\n",
-        "            \"messages\": [{\"role\":\"system\",\"content\":sys},{\"role\":\"user\",\"content\":user}],\n",
-        "            \"stream\": False,\n",
-        "            \"options\": {\"temperature\": TEMPERATURE, \"top_p\": TOP_P, \"repeat_penalty\": REPEAT_PENALTY}\n",
-        "        }, timeout=TIMEOUT_S)\n",
-        "        r.raise_for_status()\n",
-        "        return ((r.json().get(\"message\") or {}).get(\"content\") or \"\").strip()\n",
+        "    \"\"\"Send message to Ollama and return text output.\"\"\"\n",
+        "    try:\n",
+        "        if USE_GENERATE:\n",
+        "            # Simpler, faster API (no chat format)\n",
+        "            prompt = f\"<<SYS>>\\n{sys}\\n<</SYS>>\\n\\n{user}\"\n",
+        "            r = requests.post(\n",
+        "                GEN,\n",
+        "                json={\n",
+        "                    \"model\": model,\n",
+        "                    \"prompt\": prompt,\n",
+        "                    \"stream\": False,\n",
+        "                    \"options\": {\n",
+        "                        \"temperature\": TEMPERATURE,\n",
+        "                        \"top_p\": TOP_P,\n",
+        "                        \"repeat_penalty\": REPEAT_PENALTY\n",
+        "                    },\n",
+        "                },\n",
+        "                timeout=TIMEOUT_S,\n",
+        "            )\n",
+        "            r.raise_for_status()\n",
+        "            return (r.json().get(\"response\") or \"\").strip()\n",
+        "        else:\n",
+        "            # Chat-style API\n",
+        "            r = requests.post(\n",
+        "                CHAT,\n",
+        "                json={\n",
+        "                    \"model\": model,\n",
+        "                    \"messages\": [\n",
+        "                        {\"role\": \"system\", \"content\": sys},\n",
+        "                        {\"role\": \"user\", \"content\": user},\n",
+        "                    ],\n",
+        "                    \"stream\": False,\n",
+        "                    \"options\": {\n",
+        "                        \"temperature\": TEMPERATURE,\n",
+        "                        \"top_p\": TOP_P,\n",
+        "                        \"repeat_penalty\": REPEAT_PENALTY,\n",
+        "                    },\n",
+        "                },\n",
+        "                timeout=TIMEOUT_S,\n",
+        "            )\n",
+        "            r.raise_for_status()\n",
+        "            return ((r.json().get(\"message\") or {}).get(\"content\") or \"\").strip()\n",
         "\n",
-        "def synthesize_consensus(primary_model: str, prompt_name: str, per_model: Dict[str,str]) -> str:\n",
-        "    sys = \"You are a senior WRC consultant. Concisely synthesize multiple drafts into one coherent, non-redundant answer.\"\n",
+        "    except requests.exceptions.Timeout:\n",
+        "        return \"⚠️ Request timed out — model took too long.\"\n",
+        "    except Exception as e:\n",
+        "        return f\"❌ Error querying model {model}: {e}\"\n",
+        "\n",
+        "# ---------------------------------------------------------------\n",
+        "# 3️⃣ Multi-model consensus synthesis\n",
+        "# ---------------------------------------------------------------\n",
+        "def synthesize_consensus(primary_model: str, prompt_name: str, per_model: Dict[str, str]) -> str:\n",
+        "    \"\"\"Combine responses from multiple models into one cohesive expert synthesis.\"\"\"\n",
+        "    sys = (\n",
+        "        \"You are a senior WRC consultant. \"\n",
+        "        \"Synthesize multiple expert drafts into one coherent, non-redundant, executive-ready report.\"\n",
+        "    )\n",
         "    user = f\"\"\"Prompt: {prompt_name}\n",
-        "Combine the following {len(per_model)} model answers into one clear, structured response.\n",
-        "Write it in a report format without mentioning that this is a synthesized response.\n",
-        "This will be going in front of Executives and VPs, so present it accordingly.\n",
-        "- Keep the best points; remove repetition.\n",
-        "- If answers conflict, state the trade-off and your recommendation.\n",
-        "- Use short sections and bullets.\n",
         "\n",
-        "=== ANSWERS ===\n",
+        "Combine the following {len(per_model)} model answers into one structured response.\n",
+        "Do NOT mention that this is a synthesis. Present it like a polished consultant report.\n",
+        "\n",
+        "Guidelines:\n",
+        "- Keep the best points from each.\n",
+        "- Merge ideas logically.\n",
+        "- If answers conflict, show trade-offs and state your recommendation.\n",
+        "- Use concise sections and bulleted clarity.\n",
+        "\n",
+        "=== MODEL ANSWERS ===\n",
         "{json.dumps(per_model, indent=2, ensure_ascii=False)}\n",
         "\"\"\"\n",
         "    return ask_llm(primary_model, sys, user)\n"
       ],
       "metadata": {
-        "id": "MTKKxYIBkLgG"
+        "id": "MTKKxYIBkLgG",
+        "outputId": "5ddd51c9-578a-45b8-9242-d61e630e37a0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "⚙️ Using /api/chat endpoint for inference.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -955,17 +1085,54 @@
         "consensus = {}\n",
         "print(\"\\n🧠 Running prompts:\", \", \".join(RUN_PROMPTS))\n",
         "for key in RUN_PROMPTS:\n",
-        "    per_model = run_prompt_across_models(key, models)\n",
+        "    per_model = run_prompt_across_models(key, REQUESTED_MODELS)\n",
         "    results[key] = per_model\n",
         "    consensus[key] = synthesize_consensus(PRIMARY_MODEL, key, per_model)\n",
         "\n",
         "\n"
       ],
       "metadata": {
-        "id": "I2GPkTylQUJt"
+        "id": "I2GPkTylQUJt",
+        "outputId": "d372a1f9-e63c-4d13-fe2b-5a64c4a15956",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "🧠 Running prompts: PROMPT_1_FULL_7S, PROMPT_2_STRATEGY, PROMPT_3_STRUCTURE, PROMPT_4_SYSTEMS, PROMPT_5_SHARED_VALUES, PROMPT_6_SKILLS, PROMPT_7_STYLE, PROMPT_8_STAFF, PROMPT_9_ALIGNMENT, PROMPT_10_CHANGE, PROMPT_11_DIGITAL, PROMPT_12_BENCH, PROMPT_13_GAPS, PROMPT_14_INTEGRATION, PROMPT_15_EXEC_SUMMARY, MEGA_PROMPT\n",
+            "  ✓ PROMPT_1_FULL_7S via mistral: 4282 chars\n",
+            "  ✓ PROMPT_1_FULL_7S via llama3: 4601 chars\n",
+            "  ✓ PROMPT_1_FULL_7S via gemma2: 5447 chars\n",
+            "  ✓ PROMPT_2_STRATEGY via mistral: 3168 chars\n",
+            "  ✓ PROMPT_2_STRATEGY via llama3: 3464 chars\n",
+            "  ✓ PROMPT_2_STRATEGY via gemma2: 4283 chars\n",
+            "  ✓ PROMPT_3_STRUCTURE via mistral: 3825 chars\n",
+            "  ✓ PROMPT_3_STRUCTURE via llama3: 4015 chars\n",
+            "  ✓ PROMPT_3_STRUCTURE via gemma2: 5498 chars\n",
+            "  ✓ PROMPT_4_SYSTEMS via mistral: 4052 chars\n",
+            "  ✓ PROMPT_4_SYSTEMS via llama3: 3581 chars\n",
+            "  ✓ PROMPT_4_SYSTEMS via gemma2: 6593 chars\n",
+            "  ✓ PROMPT_5_SHARED_VALUES via mistral: 3797 chars\n",
+            "  ✓ PROMPT_5_SHARED_VALUES via llama3: 4096 chars\n",
+            "  ✓ PROMPT_5_SHARED_VALUES via gemma2: 1020 chars\n",
+            "  ✓ PROMPT_6_SKILLS via mistral: 2921 chars\n",
+            "  ✓ PROMPT_6_SKILLS via llama3: 3121 chars\n",
+            "  ✓ PROMPT_6_SKILLS via gemma2: 3157 chars\n",
+            "  ✓ PROMPT_7_STYLE via mistral: 3412 chars\n",
+            "  ✓ PROMPT_7_STYLE via llama3: 3876 chars\n",
+            "  ✓ PROMPT_7_STYLE via gemma2: 3995 chars\n",
+            "  ✓ PROMPT_8_STAFF via mistral: 2663 chars\n",
+            "  ✓ PROMPT_8_STAFF via llama3: 3026 chars\n",
+            "  ✓ PROMPT_8_STAFF via gemma2: 4637 chars\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
