--- a/7s.ipynb
+++ b/7s.ipynb
@@ -369,10 +369,10 @@
       ],
       "metadata": {
         "id": "86JKChI44VKI",
-        "outputId": "09cabd07-1892-418c-c751-df138e02f81b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "09cabd07-1892-418c-c751-df138e02f81b"
       },
       "execution_count": 28,
       "outputs": [
@@ -488,10 +488,10 @@
       ],
       "metadata": {
         "id": "piFQ0u-Gj0NQ",
-        "outputId": "4f38211d-55de-430c-ac0e-741f7f2dd88c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "4f38211d-55de-430c-ac0e-741f7f2dd88c"
       },
       "execution_count": 29,
       "outputs": [
@@ -1045,10 +1045,10 @@
       ],
       "metadata": {
         "id": "MTKKxYIBkLgG",
-        "outputId": "5ddd51c9-578a-45b8-9242-d61e630e37a0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "5ddd51c9-578a-45b8-9242-d61e630e37a0"
       },
       "execution_count": 32,
       "outputs": [
@@ -1093,10 +1093,10 @@
       ],
       "metadata": {
         "id": "I2GPkTylQUJt",
-        "outputId": "d372a1f9-e63c-4d13-fe2b-5a64c4a15956",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "d372a1f9-e63c-4d13-fe2b-5a64c4a15956"
       },
       "execution_count": null,
       "outputs": [
@@ -1129,7 +1129,10 @@
             "  ✓ PROMPT_7_STYLE via gemma2: 3995 chars\n",
             "  ✓ PROMPT_8_STAFF via mistral: 2663 chars\n",
             "  ✓ PROMPT_8_STAFF via llama3: 3026 chars\n",
-            "  ✓ PROMPT_8_STAFF via gemma2: 4637 chars\n"
+            "  ✓ PROMPT_8_STAFF via gemma2: 4637 chars\n",
+            "  ✓ PROMPT_9_ALIGNMENT via mistral: 4118 chars\n",
+            "  ✓ PROMPT_9_ALIGNMENT via llama3: 3325 chars\n",
+            "  ✓ PROMPT_9_ALIGNMENT via gemma2: 2597 chars\n"
           ]
         }
       ]
