--- a/7s.ipynb
+++ b/7s.ipynb
@@ -1132,7 +1132,16 @@
             "  ✓ PROMPT_8_STAFF via gemma2: 4637 chars\n",
             "  ✓ PROMPT_9_ALIGNMENT via mistral: 4118 chars\n",
             "  ✓ PROMPT_9_ALIGNMENT via llama3: 3325 chars\n",
-            "  ✓ PROMPT_9_ALIGNMENT via gemma2: 2597 chars\n"
+            "  ✓ PROMPT_9_ALIGNMENT via gemma2: 2597 chars\n",
+            "  ✓ PROMPT_10_CHANGE via mistral: 7664 chars\n",
+            "  ✓ PROMPT_10_CHANGE via llama3: 7685 chars\n",
+            "  ✓ PROMPT_10_CHANGE via gemma2: 10136 chars\n",
+            "  ✓ PROMPT_11_DIGITAL via mistral: 4041 chars\n",
+            "  ✓ PROMPT_11_DIGITAL via llama3: 4972 chars\n",
+            "  ✓ PROMPT_11_DIGITAL via gemma2: 4808 chars\n",
+            "  ✓ PROMPT_12_BENCH via mistral: 2741 chars\n",
+            "  ✓ PROMPT_12_BENCH via llama3: 4158 chars\n",
+            "  ✓ PROMPT_12_BENCH via gemma2: 528 chars\n"
           ]
         }
       ]
