--- a/7s.ipynb
+++ b/7s.ipynb
@@ -1141,7 +1141,14 @@
             "  ✓ PROMPT_11_DIGITAL via gemma2: 4808 chars\n",
             "  ✓ PROMPT_12_BENCH via mistral: 2741 chars\n",
             "  ✓ PROMPT_12_BENCH via llama3: 4158 chars\n",
-            "  ✓ PROMPT_12_BENCH via gemma2: 528 chars\n"
+            "  ✓ PROMPT_12_BENCH via gemma2: 528 chars\n",
+            "  ✓ PROMPT_13_GAPS via mistral: 4118 chars\n",
+            "  ✓ PROMPT_13_GAPS via llama3: 6489 chars\n",
+            "  ✓ PROMPT_13_GAPS via gemma2: 5117 chars\n",
+            "  ✓ PROMPT_14_INTEGRATION via mistral: 2642 chars\n",
+            "  ✓ PROMPT_14_INTEGRATION via llama3: 2584 chars\n",
+            "  ✓ PROMPT_14_INTEGRATION via gemma2: 4188 chars\n",
+            "  ✓ PROMPT_15_EXEC_SUMMARY via mistral: 3887 chars\n"
           ]
         }
       ]
