--- a/7s.ipynb
+++ b/7s.ipynb
@@ -1148,7 +1148,11 @@
             "  ✓ PROMPT_14_INTEGRATION via mistral: 2642 chars\n",
             "  ✓ PROMPT_14_INTEGRATION via llama3: 2584 chars\n",
             "  ✓ PROMPT_14_INTEGRATION via gemma2: 4188 chars\n",
-            "  ✓ PROMPT_15_EXEC_SUMMARY via mistral: 3887 chars\n"
+            "  ✓ PROMPT_15_EXEC_SUMMARY via mistral: 3887 chars\n",
+            "  ✓ PROMPT_15_EXEC_SUMMARY via llama3: 4366 chars\n",
+            "  ✓ PROMPT_15_EXEC_SUMMARY via gemma2: 1598 chars\n",
+            "  ✓ MEGA_PROMPT via mistral: 4088 chars\n",
+            "  ✓ MEGA_PROMPT via llama3: 3909 chars\n"
           ]
         }
       ]
