--- a/7s.ipynb
+++ b/7s.ipynb
@@ -1152,7 +1152,8 @@
             "  ✓ PROMPT_15_EXEC_SUMMARY via llama3: 4366 chars\n",
             "  ✓ PROMPT_15_EXEC_SUMMARY via gemma2: 1598 chars\n",
             "  ✓ MEGA_PROMPT via mistral: 4088 chars\n",
-            "  ✓ MEGA_PROMPT via llama3: 3909 chars\n"
+            "  ✓ MEGA_PROMPT via llama3: 3909 chars\n",
+            "  ✓ MEGA_PROMPT via gemma2: 5576 chars\n"
           ]
         }
       ]
