--- a/7s.ipynb
+++ b/7s.ipynb
@@ -35,11 +35,11 @@
         "drive.mount('/content/drive')"
       ],
       "metadata": {
-        "id": "8EfgM29Ynjp6",
-        "outputId": "51da5648-59f6-482f-9a87-15d6e2b1e42a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "8EfgM29Ynjp6",
+        "outputId": "e8107463-4594-44a0-cf83-6c913b3b8b8c"
       },
       "execution_count": 1,
       "outputs": [
@@ -62,7 +62,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0d057fb2-f482-4d51-c0d4-1b955a72f7a4"
+        "outputId": "77df3bc6-a822-487a-f8ce-5e128ec01113"
       },
       "execution_count": 2,
       "outputs": [
@@ -70,9 +70,9 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\u001b[?25l   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/2.0 MB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.0/2.0 MB\u001b[0m \u001b[31m85.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25h\u001b[?25l   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/472.8 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m472.8/472.8 kB\u001b[0m \u001b[31m43.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25h\u001b[?25l   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/175.3 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m175.3/175.3 kB\u001b[0m \u001b[31m22.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25l   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/2.0 MB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.0/2.0 MB\u001b[0m \u001b[31m81.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25h\u001b[?25l   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/472.8 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m472.8/472.8 kB\u001b[0m \u001b[31m43.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25h\u001b[?25l   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/175.3 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m175.3/175.3 kB\u001b[0m \u001b[31m18.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25h"
           ]
         }
@@ -298,7 +298,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "423c5546-9e31-43b5-f965-45812af33f50"
+        "outputId": "9e1d2c61-5b9e-4373-816b-5daf275c18d9"
       },
       "execution_count": 5,
       "outputs": [
@@ -309,7 +309,7 @@
             "📦 Installing Ollama (progressive)...\n",
             "✅ Installation complete.\n",
             "🚀 Starting ollama serve in background...\n",
-            "...\n",
+            "..\n",
             "✅ Ollama API ready at http://127.0.0.1:11434\n",
             "\n",
             "📥 Downloading models to: /content/drive/MyDrive/ollama_data/models\n",
@@ -370,7 +370,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "858369c4-dab2-4c17-a0aa-02eab147aab5"
+        "outputId": "de23bec9-ca0c-4c00-b201-49f21e4a4c0b"
       },
       "execution_count": 6,
       "outputs": [
@@ -489,7 +489,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c8e7e724-e6b3-4e84-a13b-726d2954d402"
+        "outputId": "66dd62ec-7847-40ea-c8ab-6791e5192df9"
       },
       "execution_count": 7,
       "outputs": [
@@ -1690,7 +1690,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "8d29133c-db10-41a5-8b87-5078da752c10"
+        "outputId": "7577a161-4040-477e-96d9-ee445ef67b89"
       },
       "execution_count": 9,
       "outputs": [
@@ -1776,9 +1776,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "8f6dbea9-8807-4dfd-8476-dceece7294e2"
+        "outputId": "ed73e4d1-a1f2-43f7-cd44-360f40dd8cb3"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1786,86 +1786,19 @@
           "text": [
             "\n",
             "🧠 Running prompts: PROMPT_1_FULL_7S, PROMPT_2_STRATEGY, PROMPT_3_STRUCTURE, PROMPT_4_SYSTEMS, PROMPT_5_SHARED_VALUES, PROMPT_6_SKILLS, PROMPT_7_STYLE, PROMPT_8_STAFF, PROMPT_9_ALIGNMENT, PROMPT_10_CHANGE, PROMPT_11_DIGITAL, PROMPT_12_BENCH, PROMPT_13_GAPS, PROMPT_14_INTEGRATION, PROMPT_15_EXEC_SUMMARY, MEGA_PROMPT\n",
-            "  ✓ PROMPT_1_FULL_7S via gpt-oss: 287 chars\n",
-            "  ✓ PROMPT_1_FULL_7S via mistral: 287 chars\n",
-            "  ✓ PROMPT_1_FULL_7S via llama3: 286 chars\n",
-            "  ✓ PROMPT_1_FULL_7S via gemma2: 286 chars\n",
-            "  ✓ PROMPT_1_FULL_7S via qwen3:14b: 289 chars\n",
-            "  ✓ PROMPT_2_STRATEGY via gpt-oss: 287 chars\n",
-            "  ✓ PROMPT_2_STRATEGY via mistral: 287 chars\n",
-            "  ✓ PROMPT_2_STRATEGY via llama3: 286 chars\n",
-            "  ✓ PROMPT_2_STRATEGY via gemma2: 286 chars\n",
-            "  ✓ PROMPT_2_STRATEGY via qwen3:14b: 289 chars\n",
-            "  ✓ PROMPT_3_STRUCTURE via gpt-oss: 287 chars\n",
-            "  ✓ PROMPT_3_STRUCTURE via mistral: 287 chars\n",
-            "  ✓ PROMPT_3_STRUCTURE via llama3: 286 chars\n",
-            "  ✓ PROMPT_3_STRUCTURE via gemma2: 286 chars\n",
-            "  ✓ PROMPT_3_STRUCTURE via qwen3:14b: 289 chars\n",
-            "  ✓ PROMPT_4_SYSTEMS via gpt-oss: 287 chars\n",
-            "  ✓ PROMPT_4_SYSTEMS via mistral: 287 chars\n",
-            "  ✓ PROMPT_4_SYSTEMS via llama3: 286 chars\n",
-            "  ✓ PROMPT_4_SYSTEMS via gemma2: 286 chars\n",
-            "  ✓ PROMPT_4_SYSTEMS via qwen3:14b: 289 chars\n",
-            "  ✓ PROMPT_5_SHARED_VALUES via gpt-oss: 287 chars\n",
-            "  ✓ PROMPT_5_SHARED_VALUES via mistral: 287 chars\n",
-            "  ✓ PROMPT_5_SHARED_VALUES via llama3: 286 chars\n",
-            "  ✓ PROMPT_5_SHARED_VALUES via gemma2: 286 chars\n",
-            "  ✓ PROMPT_5_SHARED_VALUES via qwen3:14b: 289 chars\n",
-            "  ✓ PROMPT_6_SKILLS via gpt-oss: 287 chars\n",
-            "  ✓ PROMPT_6_SKILLS via mistral: 287 chars\n",
-            "  ✓ PROMPT_6_SKILLS via llama3: 286 chars\n",
-            "  ✓ PROMPT_6_SKILLS via gemma2: 286 chars\n",
-            "  ✓ PROMPT_6_SKILLS via qwen3:14b: 289 chars\n",
-            "  ✓ PROMPT_7_STYLE via gpt-oss: 287 chars\n",
-            "  ✓ PROMPT_7_STYLE via mistral: 287 chars\n",
-            "  ✓ PROMPT_7_STYLE via llama3: 286 chars\n",
-            "  ✓ PROMPT_7_STYLE via gemma2: 286 chars\n",
-            "  ✓ PROMPT_7_STYLE via qwen3:14b: 289 chars\n",
-            "  ✓ PROMPT_8_STAFF via gpt-oss: 287 chars\n",
-            "  ✓ PROMPT_8_STAFF via mistral: 287 chars\n",
-            "  ✓ PROMPT_8_STAFF via llama3: 286 chars\n",
-            "  ✓ PROMPT_8_STAFF via gemma2: 286 chars\n",
-            "  ✓ PROMPT_8_STAFF via qwen3:14b: 289 chars\n",
-            "  ✓ PROMPT_9_ALIGNMENT via gpt-oss: 287 chars\n",
-            "  ✓ PROMPT_9_ALIGNMENT via mistral: 287 chars\n",
-            "  ✓ PROMPT_9_ALIGNMENT via llama3: 286 chars\n",
-            "  ✓ PROMPT_9_ALIGNMENT via gemma2: 286 chars\n",
-            "  ✓ PROMPT_9_ALIGNMENT via qwen3:14b: 289 chars\n",
-            "  ✓ PROMPT_10_CHANGE via gpt-oss: 287 chars\n",
-            "  ✓ PROMPT_10_CHANGE via mistral: 287 chars\n",
-            "  ✓ PROMPT_10_CHANGE via llama3: 286 chars\n",
-            "  ✓ PROMPT_10_CHANGE via gemma2: 286 chars\n",
-            "  ✓ PROMPT_10_CHANGE via qwen3:14b: 289 chars\n",
-            "  ✓ PROMPT_11_DIGITAL via gpt-oss: 287 chars\n",
-            "  ✓ PROMPT_11_DIGITAL via mistral: 287 chars\n",
-            "  ✓ PROMPT_11_DIGITAL via llama3: 286 chars\n",
-            "  ✓ PROMPT_11_DIGITAL via gemma2: 286 chars\n",
-            "  ✓ PROMPT_11_DIGITAL via qwen3:14b: 289 chars\n",
-            "  ✓ PROMPT_12_BENCH via gpt-oss: 287 chars\n",
-            "  ✓ PROMPT_12_BENCH via mistral: 287 chars\n",
-            "  ✓ PROMPT_12_BENCH via llama3: 286 chars\n",
-            "  ✓ PROMPT_12_BENCH via gemma2: 286 chars\n",
-            "  ✓ PROMPT_12_BENCH via qwen3:14b: 289 chars\n",
-            "  ✓ PROMPT_13_GAPS via gpt-oss: 287 chars\n",
-            "  ✓ PROMPT_13_GAPS via mistral: 287 chars\n",
-            "  ✓ PROMPT_13_GAPS via llama3: 286 chars\n",
-            "  ✓ PROMPT_13_GAPS via gemma2: 286 chars\n",
-            "  ✓ PROMPT_13_GAPS via qwen3:14b: 289 chars\n",
-            "  ✓ PROMPT_14_INTEGRATION via gpt-oss: 287 chars\n",
-            "  ✓ PROMPT_14_INTEGRATION via mistral: 287 chars\n",
-            "  ✓ PROMPT_14_INTEGRATION via llama3: 286 chars\n",
-            "  ✓ PROMPT_14_INTEGRATION via gemma2: 286 chars\n",
-            "  ✓ PROMPT_14_INTEGRATION via qwen3:14b: 289 chars\n",
-            "  ✓ PROMPT_15_EXEC_SUMMARY via gpt-oss: 287 chars\n",
-            "  ✓ PROMPT_15_EXEC_SUMMARY via mistral: 287 chars\n",
-            "  ✓ PROMPT_15_EXEC_SUMMARY via llama3: 286 chars\n",
-            "  ✓ PROMPT_15_EXEC_SUMMARY via gemma2: 286 chars\n",
-            "  ✓ PROMPT_15_EXEC_SUMMARY via qwen3:14b: 289 chars\n",
-            "  ✓ MEGA_PROMPT via gpt-oss: 287 chars\n",
-            "  ✓ MEGA_PROMPT via mistral: 287 chars\n",
-            "  ✓ MEGA_PROMPT via llama3: 286 chars\n",
-            "  ✓ MEGA_PROMPT via gemma2: 286 chars\n",
-            "  ✓ MEGA_PROMPT via qwen3:14b: 289 chars\n"
+            "\n",
+            "🚀 Running prompt: PROMPT_1_FULL_7S\n",
+            "  ✓ gpt-oss      |   112 chars | 315.93s\n",
+            "  ✓ mistral      |  7468 chars | 117.28s\n",
+            "  ✓ llama3       |  1795 chars | 108.65s\n",
+            "  ✓ gemma2       |   419 chars | 115.06s\n",
+            "  ✓ qwen3:14b    |   114 chars | 666.03s\n",
+            "\n",
+            "🚀 Running prompt: PROMPT_2_STRATEGY\n",
+            "  ✓ gpt-oss      |   983 chars | 143.81s\n",
+            "  ✓ mistral      |  2535 chars |  80.46s\n",
+            "  ✓ llama3       |  1063 chars |  86.11s\n",
+            "  ✓ gemma2       |   590 chars | 103.56s\n"
           ]
         }
       ]
