--- a/GithubTalkie.ipynb
+++ b/GithubTalkie.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "A100",
-      "authorship_tag": "ABX9TyN1pmVnRsxfXZup6fpp4GNB",
+      "authorship_tag": "ABX9TyMppKjzsluwmBEYw9KetySE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -61,11 +61,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "4UP38X8uaNVj"
+        "id": "4UP38X8uaNVj",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "4215a0d4-5aff-453c-861b-301d3ae2dc56"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m23.8/23.8 MB\u001b[0m \u001b[31m113.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m59.1/59.1 MB\u001b[0m \u001b[31m38.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m635.4/635.4 kB\u001b[0m \u001b[31m10.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m8.4/8.4 MB\u001b[0m \u001b[31m111.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25h"
+          ]
+        }
+      ],
       "source": [
         "# ==========================================================\n",
         "# CELL 0 — Install dependencies\n",
@@ -96,8 +112,8 @@
         "from git import Repo\n",
         "\n",
         "REPOS = [\n",
-        "    {\"name\": \"repoA\", \"url\": \"https://github.com/droidrun/droidrun\"},\n",
-        "    {\"name\": \"repoB\", \"url\": \"https://github.com/mvysny/karibu-testing\"},\n",
+        "    {\"name\": \"repoA\", \"url\": \"https://github.com/memvid/memvid.git\"},\n",
+        "    {\"name\": \"repoB\", \"url\": \"https://github.com/DMontgomery40/secondbrain.git\"},\n",
         "    # {\"name\": \"repoC\", \"url\": \"https://github.com/OWNER_C/REPO_C\"},\n",
         "]\n",
         "\n",
@@ -119,10 +135,25 @@
         "print(\"\\nRepos ready:\", list(repo_dirs.keys()))\n"
       ],
       "metadata": {
-        "id": "KhmP8Riwassw"
+        "id": "KhmP8Riwassw",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "be9ae587-5066-44cc-fe29-ade8ff0ef461"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Cloned repoA: https://github.com/memvid/memvid.git\n",
+            "Cloned repoB: https://github.com/DMontgomery40/secondbrain.git\n",
+            "\n",
+            "Repos ready: ['repoA', 'repoB']\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -183,10 +214,23 @@
         "\n"
       ],
       "metadata": {
-        "id": "9bJaMCqNbF6X"
+        "id": "9bJaMCqNbF6X",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e9865084-61d8-4722-c8c1-fe0b4eddb1b0"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "repoA files: 153\n",
+            "repoB files: 51\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -256,10 +300,100 @@
         "\n"
       ],
       "metadata": {
-        "id": "cNi38VDnb0jb"
+        "id": "cNi38VDnb0jb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "65314695-162b-463a-911f-72fc418ea45c"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "REPO: repoA\n",
+            "REPO TREE (partial):\n",
+            ".editorconfig\n",
+            ".gitattributes\n",
+            ".github/FUNDING.yml\n",
+            ".github/ISSUE_TEMPLATE/bug_report.md\n",
+            ".github/ISSUE_TEMPLATE/config.yml\n",
+            ".github/ISSUE_TEMPLATE/feature_request.md\n",
+            ".github/PULL_REQUEST_TEMPLATE.md\n",
+            ".github/workflows/ci.yml\n",
+            ".github/workflows/docker-release.yml\n",
+            ".gitignore\n",
+            "CHANGELOG.md\n",
+            "CLAUDE.md\n",
+            "CODE_OF_CONDUCT.md\n",
+            "CONTRIBUTING.md\n",
+            "Cargo.toml\n",
+            "LICENSE\n",
+            "MV2_SPEC.md\n",
+            "Makefile\n",
+            "README.md\n",
+            "SECURITY.md\n",
+            "docker/README.md\n",
+            "docker/cli/.dockerignore\n",
+            "docker/cli/Dockerfile\n",
+            "docker/cli/README.md\n",
+            "docker/cli/TESTING.md\n",
+            "docker/cli/test.sh\n",
+            "examples/basic_usage.rs\n",
+            "examples/clip_visual_search.rs\n",
+            "examples/pdf_ingestion.rs\n",
+            "examples/test_whisper.rs\n",
+            "rust-toolchain.toml\n",
+            "src/analysis/auto_tag.rs\n",
+            "src/analysis/mod.rs\n",
+            "src/analysis/ner.rs\n",
+            "src/analysis/temporal.rs\n",
+            "src/analysis/temporal_enrich.rs\n",
+            "src/clip.rs\n",
+            "src/constants.rs\n",
+            "src/encryption/capsule.rs\n",
+            "src/encryption/constants.rs\n",
+            "src/encryption/crypto.rs\n",
+            "src/encryption/error.rs\n",
+            "src/encryption/mod.rs\n",
+            "src/encryption/types.rs\n",
+            "src/enrich/engine.rs\n",
+            "src/enrich/mod.rs\n",
+            "src/enrich/rules.rs\n",
+            "src/enrichment_worker.rs\n",
+            "src/error.rs\n",
+            "src/extract.rs\n",
+            "src/extract_budgeted.rs\n",
+            "src/footer.rs\n",
+            "src/graph_search.rs\n",
+            "src/io/header.rs\n",
+            "src/io/manifest_wal.rs\n",
+            "src/io/mod.rs\n",
+            "src/io/temporal_index.rs\n",
+            "src/io/time_index.rs\n",
+            "src/io/wal.rs\n",
+            "src/lex.rs\n",
+            "src/lib.rs\n",
+            "src/lock.rs\n",
+            "src/lockfile.rs\n",
+            "src/melfilters.bytes\n",
+            "src/melfilters128.bytes\n",
+            "src/memvid/ask.rs\n",
+            "src/memvid/audit.rs\n",
+            "src/memvid/builder.rs\n",
+            "src/memvid/chunks.rs\n",
+            "src/memvid/doctor.rs\n",
+            "src/memvid/enrichment.rs\n",
+            "src/memvid/frame.rs\n",
+            "src/memvid/helpers.rs\n",
+            "src/memvid/lifecycle.rs\n",
+            "src/memvid/maintenance.rs\n",
+            "src/memvid/memory.rs\n",
+            "src/memv\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -357,7 +491,7 @@
       "metadata": {
         "id": "4EfJUZHlcCsv"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -386,10 +520,23 @@
         "\n"
       ],
       "metadata": {
-        "id": "CRmEfkijcEq1"
+        "id": "CRmEfkijcEq1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "318b7061-4449-4112-c1c2-4e9fbac96aa7"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Total federated chunks: 2128\n",
+            "Example meta: {'repo': 'repoA', 'file': 'CHANGELOG.md', 'chunk': 0}\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -576,9 +723,12 @@
         "# ==========================================================\n",
         "from transformers import AutoTokenizer, AutoModelForCausalLM, pipeline\n",
         "\n",
-        "MODEL_NAME = \"mistralai/Mistral-7B-Instruct-v0.2\"\n",
+        "# MODEL_NAME = \"mistralai/Mistral-7B-Instruct-v0.2\"\n",
+        "MODEL_NAME = \"deepseek-ai/deepseek-coder-v2\"\n",
+        "\n",
         "# If VRAM issues:\n",
         "# MODEL_NAME = \"TinyLlama/TinyLlama-1.1B-Chat-v1.0\"\n",
+        "# deepseek-coder-v2:16b\n",
         "\n",
         "\n",
         "tok = AutoTokenizer.from_pretrained(MODEL_NAME)\n",
